bug: unnecessary scrollbar

--- a/src/app/friends/friends.component.scss
+++ b/src/app/friends/friends.component.scss
@@ -22,16 +22,15 @@
 
 header {
   height: 60px;
-  width: 100%;
   display: flex;
+  flex: 1;
   background-color:rgba(0, 0, 0, 0.4);
   color: #ffffff;
   align-items:center;
   padding: 0 16px;
+  justify-items: flex-end;
 
   span {
-    position: absolute;
-    right: 25px;
     font-size: 18px;
   }
 }
